--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -4,5 +4,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+    "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "NorthwindDB": "Data Source=LeftEmpty\\SQLEXPRESS_NEW;Initial Catalog=LeftEmpty;User ID=LeftEmpty;Password=LeftEmpty;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
   }
 }
